--- a/package.json
+++ b/package.json
@@ -5,10 +5,23 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:server": "cd server && npm start",
-    "build": "tsc && vite build",
+    "dev:server": "nodemon --watch server server/index.ts",
+    "dev:all": "concurrently \"npm:dev\" \"npm:dev:server\"",
+    "build": "prisma generate && vite build",
+    "build:server": "tsc -p tsconfig.server.json",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "prisma generate",
+    "db:init": "ts-node scripts/init-db.ts",
+    "db:migrate": "ts-node scripts/migrate.ts",
+    "db:studio": "prisma studio",
+    "db:generate": "prisma generate",
+    "db:migrate:dev": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:migrate:deploy": "prisma migrate deploy",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.0",
@@ -16,30 +29,45 @@
     "@chakra-ui/theme-tools": "^2.1.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@neondatabase/serverless": "^1.0.1",
+    "@netlify/functions": "^4.1.4",
+    "@prisma/adapter-neon": "^6.9.0",
     "@prisma/client": "^6.9.0",
+    "@types/aws-serverless-express": "^3.3.10",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "aws-serverless-express": "^3.4.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.16.0",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "ws": "^8.18.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/helmet": "^0.0.48",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^22.15.30",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^9.1.2",
+    "dotenv": "^16.5.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "nodemon": "^3.1.10",
     "prisma": "^6.9.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
