--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,15 +1,19 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist-server",
+    "rootDir": "./server",
     "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
-    "outDir": "./dist",
-    "rootDir": ".",
-    "moduleResolution": "node"
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": false
   },
-  "include": ["server/**/*"],
+  "include": ["server/**/*.ts"],
   "exclude": ["node_modules"]
 }
