Clean up intern work

--- a/.env.example
+++ b/.env.example
@@ -1,40 +1,6 @@
-# Environment
-NODE_ENV=development
-
-# Server
-PORT=3001
-API_PREFIX=/api
-CORS_ORIGIN=http://localhost:3000
-
-# Database
-DATABASE_URL=postgresql://user:password@localhost:5432/gear_inventory?schema=public
-
-# Netlify (for production)
-NETLIFY_DEV=true
-
-# Prisma
-PRISMA_QUERY_ENGINE_LIBRARY=./node_modules/prisma/libquery_engine-darwin-arm64.dylib
-NODE_ENV="development"
-
-# Database Configuration
+# Database connection string
 # For SQLite (development)
-DATABASE_PROVIDER="sqlite"
 DATABASE_URL="file:./dev.db"
 
 # For PostgreSQL (production)
-# DATABASE_PROVIDER="postgresql"
-# DATABASE_URL="postgresql://user:password@host:port/dbname?schema=public"
-
-# Server Configuration
-PORT=3001
-NODE_ENV=development
-
-# Logging
-LOG_LEVEL="info"
-
-# CORS (comma-separated origins, or '*' for all)
-CORS_ORIGIN="http://localhost:5173"
-# CORS_ORIGIN="*"
-
-# API Configuration
-API_PREFIX="/api"
+# DATABASE_URL="postgresql://user:password@localhost:5432/gear_inventory?schema=public"
