--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,19 +1,15 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "outDir": "./dist-server",
-    "rootDir": "./server",
-    "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": false
+    "strict": true,
+    "skipLibCheck": true,
+    "outDir": "./dist",
+    "rootDir": ".",
+    "moduleResolution": "node"
   },
-  "include": ["server/**/*.ts"],
+  "include": ["server/**/*"],
   "exclude": ["node_modules"]
 }
