--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "dev:server": "cd server && npm start",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "vitest",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,6 +23,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@prisma/adapter-neon": "^6.9.0",
     "@prisma/client": "^6.9.0",
+    "@prisma/extension-accelerate": "^2.0.1",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "cors": "^2.8.5",
@@ -32,22 +37,29 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@tanstack/react-query": "^5.80.6",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^22.15.30",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^3.2.3",
+    "@vitest/ui": "^3.2.3",
+    "axios": "^1.9.0",
     "concurrently": "^9.1.2",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^26.1.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.9.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "vite": "^5.0.11"
+    "vite": "^5.0.11",
+    "vitest": "^3.2.3"
   }
 }
