Fix build script

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "Backend server for Camping Gear Inventory",
   "type": "module",
   "scripts": {
-    "start": "node index.mjs"
+    "start": "node index.mjs",
+    "build": "npx prisma generate",
+    "postinstall": "npx prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
