--- a/server/render.yaml
+++ b/server/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: gear-inventory-backend
     env: node
-    buildCommand: npm install
+    buildCommand: npm install && npm run build
     startCommand: NODE_ENV=production npm start
     envVars:
       - key: NODE_ENV
