--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,9 @@
 # Database URL for Prisma
 DATABASE_URL="postgresql://username:password@host:port/database?schema=public"
 
+# Direct connection URL (recommended for production with pooled connections)
+DIRECT_URL="postgresql://username:password@host:port/database?schema=public"
+
 # Node environment
 NODE_ENV=development
 
