--- a/server/render.yaml
+++ b/server/render.yaml
@@ -8,13 +8,7 @@ services:
       - key: NODE_ENV
         value: production
       - key: DATABASE_URL
-        fromDatabase:
-          name: gear-inventory-db
-          property: connectionString
-      - key: DIRECT_URL
-        fromDatabase:
-          name: gear-inventory-db
-          property: connectionString
+        value: "prisma+postgres://accelerate.prisma-data.net/?api_key=${PRISMA_ACCELERATE_API_KEY}"
       # Add any other environment variables you need
 
 databases:
