--- a/server/package.json
+++ b/server/package.json
@@ -4,22 +4,21 @@
   "description": "Backend server for Camping Gear Inventory",
   "type": "commonjs",
   "scripts": {
-    "prestart": "node setup.js",
     "start": "NODE_ENV=production node server.js",
     "dev": "node index.mjs",
-    "build": "node setup.js",
-    "postinstall": "node setup.js"
+    "build": "prisma generate"
   },
   "dependencies": {
+    "@prisma/extension-accelerate": "^6.9.0",
     "@prisma/client": "^6.9.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "prisma": "^6.9.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^22.15.30",
-    "prisma": "^6.9.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
